Sign In with Google working

--- a/Development/cswap/src/App.css
+++ b/Development/cswap/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #dfdfdf;
+  background-color: #013220;
   display: flex;
   justify-content: center;
   align-content: center;
