--- a/Development/cswap/src/App.css
+++ b/Development/cswap/src/App.css
@@ -26,3 +26,19 @@ body {
   height: 38px !important;
 }
 
+.f-btn {
+    width: 100% !important;
+    height: 40px !important;
+    font-size: 25px !important;
+    margin-top: 15px;
+}
+.f-btn > div,
+.f-btn > div > svg {
+  width: 40px !important;
+  height: 38px !important;
+}
+
+.f-btn-pic {
+  position: relative;
+  bottom: 40px;
+}
