--- a/Development/cswap/src/App.css
+++ b/Development/cswap/src/App.css
@@ -1,45 +1,17 @@
-body {
-  background-color: #013220;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  width: 100%;
-  align-items: center;
-  height: 100vh;
-}
-
 .box {
   border: 1px solid #dfdfdf;
   border-radius: 5px;
   background-color: #e7ecef;
 }
 
-.g-btn {
+.g-btn, .fb-btn {
   width: 100% !important;
-  height: 40px !important;
-  line-height: 40px !important;
-  font-size: 15px !important;
+  height: 50px !important;
+  line-height: 50px !important;
+  font-size: 20px !important;
 }
 .g-btn > div,
 .g-btn > div > svg {
-  width: 40px !important;
-  height: 38px !important;
-}
-
-.fb-div {
-  padding-top: 10px;
-}
-
-.fb-btn {
-  height: 40px !important;
-  width: 100%;
-}
-
-.fb-sqr {
-  padding-right: 20px;
-  padding-bottom: 0;
-}
-
-.fb-btn-text {
-  padding-left: 10px;
+  width: 50px !important;
+  height: 48px !important;
 }
