--- a/Development/cswap/src/App.css
+++ b/Development/cswap/src/App.css
@@ -1,20 +1,38 @@
-*{
-  margin: 0;
-}
-.box {
-  border: 1px solid #dfdfdf;
-  border-radius: 5px;
-  background-color: #e7ecef;
+.App {
+  text-align: center;
 }
 
-.g-btn, .fb-btn {
-  width: 100% !important;
-  height: 50px !important;
-  line-height: 50px !important;
-  font-size: 20px !important;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
-.g-btn > div,
-.g-btn > div > svg {
-  width: 50px !important;
-  height: 48px !important;
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
